Konffi ja bugi koodissa korjattu

--- a/build.gradle
+++ b/build.gradle
@@ -15,12 +15,12 @@ dependencies {
 }
 
 application {
-    mainClass = 'ohtu.ohtuvarasto.Main'
+    mainClass = 'paaohjelma.Main'
 }
 
 jar {
     manifest {
-        attributes 'Main-Class': 'ohtu.ohtuvarasto.Main'
+        attributes 'Main-Class': 'paaohjelma.Main'
     }
 }
 
