--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,3 +21,5 @@ jobs:
       run: ./gradlew test
     - name: Code coverage report
       run: ./gradlew jacocoTestReport
+    - name: Checkstyle
+      run: ./gradlew checkstyleMain
